--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,13 @@
             <artifactId>postgresql</artifactId>
             <version>42.2.2</version>
         </dependency>
+
+        <!-- Switch back from Spring Boot 2.x standard HikariCP to Tomcat JDBC,
+   configured later in Heroku (see https://stackoverflow.com/a/49970142/4964553) -->
+        <dependency>
+            <groupId>org.apache.tomcat</groupId>
+            <artifactId>tomcat-jdbc</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
